// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tile matches snapshot when does not have a title 1`] = `
.css-w7sbyx-Tile__root {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
}

@media only screen and (max-width:768px) {
  .css-w7sbyx-Tile__root {
    padding: 16px;
  }
}

<div
  className="css-w7sbyx-Tile__root"
>
  Tile content
</div>
`;

exports[`Tile matches snapshot when does not have any padding 1`] = `
.css-f28pf6-Tile__root-Tile__noPadding {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
  padding: 0px !important;
}

@media only screen and (max-width:768px) {
  .css-f28pf6-Tile__root-Tile__noPadding {
    padding: 16px;
  }
}

<div
  className="css-f28pf6-Tile__root-Tile__noPadding"
>
  Tile content
</div>
`;

exports[`Tile matches snapshot when has a title 1`] = `
.css-w7sbyx-Tile__root {
  background: #fff;
  box-shadow: 0 2px 10px rgba(135,155,166,0.1);
  padding: 24px;
}

@media only screen and (max-width:768px) {
  .css-w7sbyx-Tile__root {
    padding: 16px;
  }
}

.css-1ggmy1r-Tile__title {
  color: #879ba6;
  text-transform: uppercase;
  font-weight: 500;
  font-size: 0.9rem;
  margin-bottom: 16px;
}

@media only screen and (max-width:768px) {
  .css-1ggmy1r-Tile__title {
    margin-bottom: 8px;
  }
}

<div
  className="css-w7sbyx-Tile__root"
>
  <div
    className="css-1ggmy1r-Tile__title"
  >
    Title
  </div>
  Tile content
</div>
`;
